--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/FuZhouWebAR.loader.js"></script>
+    <script src="Build/Festivals.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/FuZhouWebAR.data.br",
-        frameworkUrl: "Build/FuZhouWebAR.framework.js.br",
-        codeUrl: "Build/FuZhouWebAR.wasm.br",
+        dataUrl: "Build/Festivals.data.br",
+        frameworkUrl: "Build/Festivals.framework.js.br",
+        codeUrl: "Build/Festivals.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Festivals",
