中秋未压缩版

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
         var db = indexedDB.open("dummy_indexdb", 1); // iOS 14.6 fix; the call to open indexdb hangs forever otherwise
 
         const buildUrl = "Build";
-        const loaderUrl = buildUrl + "/ZhongQiuWebAR.loader.js";
+        const loaderUrl = buildUrl + "/ZhongQiuAndFuZhou.loader.js";
         const config = {
-            dataUrl: buildUrl + "/8179f2da1858f02d4ad4cf89041afaed.data.br",
-            frameworkUrl: buildUrl + "/e7712afc0081c10e54508627a43e58fb.js.br",
-            codeUrl: buildUrl + "/3c9ae0250ed300e819129b759b2b4a56.wasm.br",
+            dataUrl: buildUrl + "/88187b9876341ab55c2640d46ed4b113.data",
+            frameworkUrl: buildUrl + "/5fa9edc532dce071d80c9f4de8f11642.js",
+            codeUrl: buildUrl + "/8f8c12bb9efc81ca77d4f97ee2bab664.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "DefaultCompany",
             productName: "Festivals",
